Conteinerization/05-Kubernetes-network/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    #rollingUpdate:
    #  maxSurge: 1
    #  maxUnavailable: 0
    #type: RollingUpdate
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
          - name: port5432
            containerPort: 5432
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: postgres-data-pvc 
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
          limits:
            cpu: 100m
            memory: 400Mi
      volumes:
        - name: postgres-data-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc
