Conteinerization/05-Kubernetes-network/redmine-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
          - name: port5432
            containerPort: 5432
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
          limits:
            cpu: 100m
            memory: 400Mi
