Conteinerization/05-Kubernetes-network/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    service: postgres
