Conteinerization/05-Kubernetes-network/redmine-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
spec:
  selector:
    app: redmine-container
    #tier: backend  
  ports:
  - name: redmine-ports
    protocol: TCP
    port: 80
    targetPort: 3000
  #type: ClusterIP
