Conteinerization/05-Kubernetes-network/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
spec:
  rules:
  #- host: my-host.local 
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redmine
            port:
              number: 80
